sunuo (0.4.1) unstable; urgency=low

  * added interface IPacket, implemented by class Packet
  * implemented abstract packet recycler code
    - recycle MobileMoving
  * show correct client number in disconnect message
  * continued memory optimizations
    - eliminated most DateTime.Now calls
    - all other DateTime.Now calls are converted to DateTime.UtcNow to avoid
      time zone lookups
    - reuse timer in spawner engine
    - early return when HarrowerTentacles have no drain targets
    - reuse TimerChangeEntry objects
  * lock m_Accounts in Accounting.Accounts
  * manual synchronization of TimerThread.m_ChangeQueue
  * obsolete APIs
    - ScriptCompiler.Assemblies

 --

sunuo (0.4.0) unstable; urgency=low

  * implemented a main loop profiler
  * refuse to load objects with serial -1
  * transactional world save
  * non-interactive world repair
  * reserve 10% space in mobile/item hash tables
  * script debugging is always enabled
  * explicit TileData initialization
  * added Config.Network
    - configure Listeners
  * Listener.Slice() returns null when idle
  * ScriptCompiler ignores control directories of common revision control
    systems
  * bugfix in Mobile.cs: send poison message only for standard poisons
    (patch from Kai Sassmannshausen)
  * login: optionally limit the number of account creations per IP (patch
    from Patrick Reinhardt)
  * disable some of the string.Intern() calls because they were poisoning
    the intern tables
  * synchronize NetState.FinishDispose()
  * implemented feature "manual-gc" for manual garbage collection
  * parsing boolean values from the configuration file is now strict
  * enable AutoAccountCreation by default
  * added legacy scripts
    - use log4net for logging
    - removed Address from ServerList
    - default to server list from Config.GameServerListConfig
    - get server name from Config.ServerName
    - make backup path portable
    - display "SunUO" in UOGInfo packet