@@ -171,10 +171,13 @@ namespace Server.Accounting
 			XmlDocument doc = new XmlDocument();
 			XmlReader reader = new XmlTextReader(filePath);
 
-			while (reader.Read()) {
+			reader.Read();
+			while (true) {
 				if (reader.NodeType != XmlNodeType.Element ||
-					reader.Name != "account")
+					reader.Name != "account") {
+					reader.Read();
 					continue;
+				}
 
 				XmlElement account = (XmlElement)doc.ReadNode(reader);
 
